# notify-multiplexer

./: .gitignore  BaseSink.py  BaseSource.py  BroadcastTransport.py  ConfiguredTransport.py  Makefile  NetworkBus.py  README  README.md  Server.py  TestSource.py  UnixSocketSource.py  bugDemo.py  client  client.c  libnotifymultiplex.py  logging.c  logging.h  mac-client.py  make_certs.sh  make_egg.py  message.c  message.h  server  server.c  server.py  ubuntu-client.py  ubuntu-client2.py  ubuntu-install.sh  unixDomain.c  unixDomain.h
client/: Makefile.am  Makefile.in  configure.ac  mac-client.py  test-unicast-client.py
client/android/.metadata/.plugins/org.eclipse.core.resources/.projects/NotifyMultiplexerAndroid/: .markers.snap
client/android/.metadata/.plugins/org.eclipse.core.resources/.projects/NotifyMultiplexerAndroid/.indexes/: history.index
client/android/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
client/android/.metadata/.plugins/org.eclipse.epp.usagedata.recording/: usagedata.csv
client/android/.metadata/.plugins/org.eclipse.jdt.core/: externalLibsTimeStamps  savedIndexNames.txt
client/android/NotifyMultiplexerAndroid/: .project
client/android/NotifyMultiplexerAndroid/res/values/: strings.xml
client/android/NotifyMultiplexerAndroid/src/name/pressers/notifymultiplexer/: GCMIntentService.java
libnotifymultiplex/: __init__.py  libnotifymultiplex.py  message.py
notification-clients/: notify-multiplex.pl
server/: Makefile.in  configure  configure.ac  notify-multiplex-server  notify-multiplex-server.in  server.py
(+45 files in other folders)
