#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([Notify Multiplex Client], [1.0], [steve@pressers.name])
AM_INIT_AUTOMAKE([])
AC_CONFIG_FILES([Makefile])

# Checks for programs.
AM_PATH_PYTHON([3.0],,)

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT