#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([Notify Multiplex Server], [1.0], [steve@pressers.name])
AC_CONFIG_FILES([Makefile notify-multiplex-server])

# Checks for programs.
AM_PATH_PYTHON([3.0],,)

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_OUTPUT